# scraplingy

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/scraplingy/: _fetcher.py  _scrapling.py  cli.py  mcp.py
