[project]
name = "scraplingy"
version = "0.2.3"
description = "Scrapling + CloakBrowser integration. A CLI and MCP server for fetching bot-protected websites."
readme = "README.md"
authors = [
    { name = "drtx32", email = "jyl320583@gmail.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.14.2",
    "click>=8.1.0",
    "lxml>=6.0.2",
    "markdownify>=1.2.0",
    "mcp>=1.28.0",
    "scrapling[fetchers]>=0.4.7",
    # Indirect dependencies (security constraints)
    "cryptography>=48.0.1",
    "idna>=3.15",
    "PyJWT>=2.13.0",
    "python-multipart>=0.0.31",
    "starlette>=1.3.1",
]

[project.urls]
"Homepage" = "https://github.com/cyberchitta/scraplingy"
"Bug Tracker" = "https://github.com/cyberchitta/scraplingy/issues"

[project.scripts]
scraplingy = "scraplingy.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src/**"]

[tool.hatch.build.targets.wheel]
sources = ["src"]
